<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.App.MaterialCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- نام کالا -->
        <TextView
            android:id="@+id/tvItemTitle"
            style="@style/TitleText"
            android:text="@string/option_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:singleLine="true"/>

        <!-- قیمت کالا -->
        <TextView
            android:id="@+id/tvItemPrice"
            style="@style/SpecialText.Blue"
            android:text="@string/option_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:ellipsize="end"
            android:singleLine="true"/>

        <!-- دکمه‌ها -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnRenameItem"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_edit"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btn_edit"/>

            <ImageButton
                android:id="@+id/btnEditItem"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_price"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btn_save"/>

            <ImageButton
                android:id="@+id/btnDeleteItem"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_delete"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btn_delete"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
